--- a/JSON/biomes_conf.json
+++ b/JSON/biomes_conf.json
@@ -38,6 +38,7 @@
     {
         "epicea" : ["tree_1","tree_2"],
         "sapin" : ["tree_sapin_1","tree_sapin_2","tree_sapin_3"],
+        "redtree" : ["tree_red_1","tree_red_2","tree_red_3"],
         "rock" : ["rock_1","rock_2","rock_3","rock_4"],
         "grass" : ["grass_1","grass_2"]
     },
@@ -54,7 +55,7 @@
         "red desert":["rock","epicea"],
         "plains":["grass","rock","epicea"],
         "hills":["grass","rock","epicea"],
-        "red forest":["grass","rock","epicea"],
+        "red forest":["grass","redtree"],
         "swamp":["grass","epicea"],
         "desert":["rock"],
         "lakes":["grass","epicea","sapin"],
@@ -70,23 +71,23 @@
     "data_probs":
     {
         "sea":[],
-        "mountains":[0.1,0.5],
+        "mountains":[0.1,0.05],
         "tundra":[],
         "frozen desert":[],
         "ocyan":[],
         "golems land":[0.8,0.05],
         "enchanted forest":[0.05,0.8],
         "red desert":[0.02,0.005],
-        "plains":[0.8,0.2,0.1],
-        "hills":[0.5,0.2,0.5],
-        "red forest":[0.05,0.05,0.8],
-        "swamp":[0.8,0.05],
+        "plains":[0.5,0.05,0.02],
+        "hills":[0.2,0.1,0.1],
+        "red forest":[0.05,0.5],
+        "swamp":[0.8,0.01],
         "desert":[0.02],
-        "lakes":[0.5,0.2,0.2],
+        "lakes":[0.3,0.05,0.05],
         "forest":[0.05,0.05,0.8],
         "humid lands":[],
         "jungle":[],
-        "savanna":[0.02,0.5],
+        "savanna":[0.02,0.1],
         "tropical forest":[0.05,0.05,0.8],
         "volcanic lands":[],
         "error":[]
@@ -104,7 +105,7 @@
         "red desert":[2,1] ,
         "plains":[5,2,1] ,
         "hills":[2,2,2] ,
-        "red forest":[1,1,4] ,
+        "red forest":[1,2] ,
         "swamp":[5,1] ,
         "desert":[2] ,
         "lakes":[3,1,1] ,
