--- a/JSON/biomes_conf.json
+++ b/JSON/biomes_conf.json
@@ -39,7 +39,7 @@
         "epicea" : ["tree_1","tree_2"],
         "sapin" : ["tree_sapin_1","tree_sapin_2","tree_sapin_3"],
         "redtree" : ["tree_red_1","tree_red_2","tree_red_3"],
-        "rock" : ["rock_1","rock_2","rock_3","rock_4"],
+        "rock" : ["rock_1","rock_2","rock_3"],
         "grass" : ["grass_1","grass_2"]
     },
 
