(#16) lots of tiny improvements

--- a/JSON/biomes_conf.json
+++ b/JSON/biomes_conf.json
@@ -11,7 +11,7 @@
         "sea":"#0000ff",
         "mountains":"#000000",
         "tundra":"#00f6ed",
-        "frozen desert":"#d1cfe2",
+        "frozen desert":"#d1cfe2", 
         "ocyan":"#261447",
         "golems land":"#9cadce",
         "enchanted forest":"#f7b1ab",
@@ -27,7 +27,7 @@
         "jungle":"#31d843",
         "savanna":"#f4b266",
         "tropical forest":"#38a700",
-        "volcanic lands":"#474647",
+        "volcanic lands":"#474647", 
         "error":"#ff0000"
     },
 
@@ -39,6 +39,7 @@
         "epicea" : ["tree_1","tree_2"],
         "sapin" : ["tree_sapin_1","tree_sapin_2","tree_sapin_3"],
         "redtree" : ["tree_red_1","tree_red_2","tree_red_3"],
+        "jungletree" : ["tree_jungle_1"],
         "rock" : ["rock_1","rock_2","rock_3"],
         "grass" : ["grass_1","grass_2"]
     },
@@ -60,8 +61,8 @@
         "desert":["rock"],
         "lakes":["grass","epicea","sapin"],
         "forest":["grass","rock","sapin"],
-        "humid lands":[],
-        "jungle":[],
+        "humid lands":["jungletree","grass"],
+        "jungle":["jungletree","rock"],
         "savanna":["rock","grass"],
         "tropical forest":["grass","rock","sapin"],
         "volcanic lands":[],
@@ -85,8 +86,8 @@
         "desert":[0.02],
         "lakes":[0.3,0.05,0.05],
         "forest":[0.05,0.05,0.8],
-        "humid lands":[],
-        "jungle":[],
+        "humid lands":[0.05,0.2],
+        "jungle":[0.5,0.1],
         "savanna":[0.02,0.1],
         "tropical forest":[0.05,0.05,0.8],
         "volcanic lands":[],
@@ -110,8 +111,8 @@
         "desert":[2] ,
         "lakes":[3,1,1] ,
         "forest":[1,1,4] ,
-        "humid lands":[],
-        "jungle":[],
+        "humid lands":[1,2],
+        "jungle":[1,3],
         "savanna":[2,3] ,
         "tropical forest":[1,1,4] ,
         "volcanic lands":[],
